@startuml
title Class Diagram - Iteration 2

' ─── Domain Model (models/user.py) ───────────────────────────
class User {
  +name: String
  +surname: String
  +matricola: String
  +department: String
  +course: String
  +tipology: String
  +year: int
  -passwordHash: String
}

' ─── Authentication Layer (auth/) ────────────────────────────
class AuthController {
  -_service: AuthService
  -_cookie_max_age: int
  +login(matricola: String, password: String, response: Response): dict
  +register(name: String, surname: String, matricola: String, password: String, department: String, course: String, tipology: String, year: int, response: Response): dict
}

class AuthService {
  -_repo: ProfileRepository
  -_jwt: JWTManager
  +authenticate(matricola: String, password: String): dict
  +createUser(name: String, surname: String, matricola: String, password: String, department: String, course: String, tipology: String, year: int): dict
}

class JWTManager {
  +secret_key: String
  +algorithm: String
  +expire_minutes: int
  +generateToken(data: dict): String
  +validateToken(token: String): dict
  +validateFromRequest(request: Request): dict
}

class ProfileRepository {
  -_collection: AsyncIOMotorCollection
  +findById(matricola: String): dict
  +findByEmail(email: String): dict
  +save(user_doc: dict): dict
  +exists(matricola: String): bool
}

' ─── Agent Layer (agents/) ───────────────────────────────────
class AgentState {
  +query: String
  +context: dict
  +conversation_history: List
  +user_status: String
  +user_name: String
  +user_surname: String
  +user_department: String
  +user_course: String
  +user_tipology: String
  +user_year: int
  +user_matricola: String
  +category: String
  +category_description: String
  +confidence: String
  +generated_response: String
  +generation_status: String
  +final_response: String
  +has_revisions: bool
  +workflow_steps: List
  +current_step: String
  +error: String
  +status: String
}

class OrchestratorAgent {
  -llm: ChatGroq
  -classifier: ClassifierAgent
  -generator: GeneratorAgent
  -reviser: RevisionAgent
  -workflow: StateGraph
  +process_query(query: String, context: dict, user_info: dict, conversation_history: List): dict
  +get_available_agents(): List
  +get_conversation_history(limit: int): List
  +clear_conversation_history(): void
  +analyze_query(query: String): dict
}

class ClassifierAgent {
  -CATEGORIES: dict
  -llm: ChatGroq
  +classify(query: String, user_context: String, conversation_history: List): dict
}

class GeneratorAgent {
  -CATEGORY_PROMPTS: dict
  -llm: ChatGroq
  +generate(query: String, category: String, context: dict, user_context: String, conversation_history: List): dict
}

class RevisionAgent {
  -llm: ChatGroq
  -system_prompt: String
  +revise(original_query: String, generated_response: String, category: String, user_context: String, conversation_history: List): dict
  +quick_check(response: String): dict
}

' ─── Relazioni Authentication Layer ──────────────────────────
AuthController --> AuthService       : delega
AuthService    --> JWTManager        : genera/valida token
AuthService    --> ProfileRepository : gestisce profilo
ProfileRepository "1" --> "0..1" User : persiste

' ─── Relazioni Agent Layer ────────────────────────────────────
OrchestratorAgent "1" *--> "1" ClassifierAgent : classifier
OrchestratorAgent "1" *--> "1" GeneratorAgent  : generator
OrchestratorAgent "1" *--> "1" RevisionAgent   : reviser
OrchestratorAgent --> AgentState               : crea/aggiorna
AgentState ..> OrchestratorAgent               : passato come contesto

' ─── Collegamento tra i layer ────────────────────────────────
AuthController ..> OrchestratorAgent  : (main.py li istanzia entrambi)
AuthService    --> ProfileRepository  : verifica utente

@enduml